--- a/JAVA/pom.xml
+++ b/JAVA/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.silvalves</groupId>
+	<groupId>com.senac</groupId>
 	<artifactId>armazem</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>armazem</name>
